More descriptive name for a test

--- a/tests/default.yaml
+++ b/tests/default.yaml
@@ -20,7 +20,7 @@
       params:
         network: 'production'
 
-- no-visits-found:
+- visits-info-is-being-received:
     max_bytes_read: null
     max_time: null
     sql: |
